syntax = "proto3";

package project;

service Service {
  rpc CreateProject (CreateProjectRequest) returns (CreateProjectResponse);
  rpc GetProject (GetProjectRequest) returns (GetProjectResponse);
  rpc ListProjects (ListProjectsRequest) returns (ListProjectsResponse);
  rpc UpdateProject (UpdateProjectRequest) returns (UpdateProjectResponse);
  rpc DeleteProject (DeleteProjectRequest) returns (DeleteProjectResponse);
}

message Project {
  string id = 1;
  string account = 2;
  string name = 3;
  string description = 4;
  int64 created = 5;
  int64 modified = 6;
}

message CreateProjectRequest {
  string account = 1;
  string name = 2;
  string description = 3;
}

message CreateProjectResponse {
  Project project = 1;
}

message UpdateProjectRequest {
  string account = 1;
  string id = 2;
  string name = 3;
  string description = 4;
}

message UpdateProjectResponse {}


message DeleteProjectRequest {
  string account = 1;
  string id = 2;
}

message DeleteProjectResponse {}


message GetProjectRequest {
  string account = 1;
  string id = 2;
}

message GetProjectResponse {
  Project project = 1;
}

message ListProjectsRequest {
  string account = 1;
}

message ListProjectsResponse {
  repeated Project projects = 1;
}
